[package]
name = "bdk_wallet"
homepage = "https://bitcoindevkit.org"
version = "3.1.0-alpha.0"
repository = "https://github.com/bitcoindevkit/bdk_wallet"
documentation = "https://docs.rs/bdk_wallet"
description = "A modern, lightweight, descriptor-based wallet library"
keywords = ["bitcoin", "wallet", "descriptor", "psbt"]
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = ["Bitcoin Dev Kit Developers"]
edition = "2021"
rust-version = "1.85.0"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.rbmt.toolchains]
nightly = "nightly-2026-05-30"
stable = "1.95.0"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[dependencies]
bdk_chain = {version = "0.23.3", features = ["miniscript", "serde", "hashbrown"], default-features = false }
bitcoin = { version = "0.32.8", features = ["serde"], default-features = false }
base64 = { version = "0.21.3", default-features = false, features = ["alloc"] }
miniscript = { version = "12.3.5", features = ["no-std"], default-features = false }
rand_core = { version = "0.6.4" }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.80", default-features = false, features = ["alloc"] }

# Optional dependencies
anyhow = { version = "1.0.66", optional = true }
bdk_file_store = { version = "0.22.0", optional = true }
bincode = { version = "1.3.0", optional = true }
bip39 = { version = "2.2.2", optional = true }
tempfile = { version = "3.26.0", optional = true }

[features]
default = ["std"]
std = ["bitcoin/std", "bitcoin/rand-std", "bitcoin/base64","base64/std", "miniscript/std", "bdk_chain/std", "serde/std", "serde_json/std","miniscript/serde"]
compiler = ["miniscript/compiler"]
all-keys = ["keys-bip39"]
keys-bip39 = ["bip39"]
rusqlite = ["std", "bdk_chain/rusqlite"]
file_store = ["std", "bdk_file_store", "bincode"]
test-utils = ["std", "anyhow", "tempfile"]

[dev-dependencies]
anyhow = "1.0.66"
assert_matches = "1.5.0"
bitcoin-units = "0.1.3"
thiserror = "1.0.56"
serde_json = { version = "1.0.80", features = ["raw_value"] }
bdk_bitcoind_rpc = { version = "0.22.0" }
bdk_electrum = { version = "0.23.2" }
bdk_esplora = { version = "0.22.1", features = ["async-https", "blocking-https", "tokio"] }
bdk_wallet = { path = ".", features = ["rusqlite", "file_store", "test-utils"] }
clap = { version = "4.5.60", features = ["derive", "env"] }
ctrlc = "3.5.2"
rand = "0.8"
tempfile = "3.26.0"
tokio = { version = "1.38.1", features = ["rt", "rt-multi-thread", "macros"] }
openssl = "0.10.69"
native-tls = "0.2.13"

[[example]]
name = "mnemonic_to_descriptors"
path = "examples/mnemonic_to_descriptors.rs"
required-features = ["all-keys"]

[[example]]
name = "miniscriptc"
path = "examples/compiler.rs"
required-features = ["compiler"]

[[example]]
name = "electrum"

[[example]]
name = "esplora_async"

[[example]]
name = "esplora_blocking"

[[example]]
name = "bitcoind_rpc"
